Increase font sizes of inputs, labels, and headings both to improve readability and to disable automatic zoom, on mobile, which is currently triggered when user focuses/taps on input element

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,14 @@ input {
   background-color: white;
 }
 
+label {
+  font-size: 18px;
+}
+
+input {
+  font-size: 16px;
+}
+
 .container {
   margin: 0 3em;
 }
